<resources>
    <string name="app_name">Movies</string>
    <string name="internet_permission_request">Internet permission needed</string>
    <string name="internet_permission_body">Please confirm internet access</string>
    <string name="download_error">Movies download error, please try later.</string>


    <string-array name="starwars_movies">
        <item>Phantom Menace</item>
        <item>Star Wars: Episode II</item>
        <item>Revenge of the Sith</item>
        <item>Star Wars: Episode IV</item>
        <item>The Empire Strikes Back</item>
        <item>Return of the Jedi</item>
        <item>The Force Awakens</item>
        <item>Rogue One</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plot">Plot</string>
    <string name="rating">rating</string>
    <string name="director">director</string>
    <string name="genre">genre</string>
    <string name="year">year</string>
</resources>
